feat: adicionando listagem de favoritos
