# src/main/java/com/elasticsearch/search/controller/SearchController.java
@@ -5,8 +5,7 @@ import com.elasticsearch.search.api.model.QueryParameter;
 import com.elasticsearch.search.api.model.ResultList;
 import com.elasticsearch.search.service.SearchService;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.concurrent.CompletableFuture;
 
@@ -24,5 +23,23 @@ public class SearchController implements SearchApi {
     public CompletableFuture<ResponseEntity<ResultList>> search(QueryParameter queryParameter) {
         var result = searchService.submitQuery(queryParameter);
         return CompletableFuture.supplyAsync(() -> ResponseEntity.ok(result));
+    }
+
+    @PostMapping("/search/fav/{id}")
+    public CompletableFuture<ResponseEntity<String>> favoriteDocument(@PathVariable String id) {
+        searchService.favoriteDocument(id);
+        return CompletableFuture.supplyAsync(() -> ResponseEntity.ok("Article with id " + id + " was favorited"));
+    }
+
+    @GetMapping("/search/fav")
+    public CompletableFuture<ResponseEntity<ResultList>> searchFavorites() {
+        var result = searchService.searchFavorites();
+        return CompletableFuture.supplyAsync(() -> ResponseEntity.ok(result));
+    }
+
+    @DeleteMapping("/search/fav/{id}")
+    public CompletableFuture<ResponseEntity<String>> unfavoriteDocument(@PathVariable String id) {
+        searchService.unfavoriteDocument(id);
+        return CompletableFuture.supplyAsync(() -> ResponseEntity.ok("Article with id " + id + " was unfavorited"));
     }
 }
